# Kukufi

./: Cargo.toml  Makefile  glyphsOriginal.toml  glyphs_1.toml  project.md  session.md
assets/: glyphs.toml
benches/: benchmark.rs
src/: cli.rs  error.rs  lib.rs  main.rs  models.rs  renderer.rs  shaper.rs  tui.rs
tests/: integration_test.rs
tests/data/: plain.txt  test.ans
