[package]
name = "kukufi"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Convert Arabic text into Kufi art ASCII text"
authors = ["Your Name <email@example.com>"]
license = "MIT OR Apache-2.0"

[lib]
name = "kukufi"
path = "src/lib.rs"

[[bin]]
name = "kukufi"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
